# socratic-watchdog

./: .env.example  .gitignore  ARCHITECTURE.md  BACKLOG.md  HERMES_INTEGRATION.md  LICENSE  README.md  demo.ipynb  demo_01_basics.ipynb  demo_02_tests.ipynb  demo_03_watch.ipynb  demo_04_audio_model.ipynb  demo_colab.ipynb  demo_manual_test.ipynb  lesson_dictionaries.ipynb  project.yaml  pyproject.toml
.github/workflows/: publish-to-pypi.yml
demo_for_prof/: audio_toggle.ipynb  model_switching.ipynb
experimental/: README.md  gamification.py  notebook_chat.py  personas.py  stt_whisper.py  tts_coqui.py
scripts/: nightly_report.py
socratic_watchdog/: __init__.py  _core.py  magics.py
tests/: test_magics.py  test_nightly_report.py  test_socratic_watchdog_core.py
