[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "socratic-watchdog"
version = "0.2.0"
description = "A Socratic TTS coding assistant that watches your Jupyter notebook and speaks guiding questions when you go off-track"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE*"]
authors = [
    {name = "Rauan Khamza"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Education :: Computer Aided Instruction (CAI)",
]
keywords = ["jupyter", "socratic", "tts", "education", "teaching", "coding", "mentor"]
dependencies = [
    "ipython>=8.0.0",
]

[project.optional-dependencies]
edge-tts = ["edge-tts>=7.0.0"]
kokoro = ["kokoro>=0.9.0"]
dev = ["pytest", "jupyterlab"]

[project.urls]
"Source Code" = "https://github.com/dive4dec/jupyter-hermes-personalities"
Homepage = "https://github.com/dive4dec/jupyter-hermes-personalities"

[tool.hatch.build.targets.wheel]
packages = ["socratic_watchdog"]
